--- a/package.json
+++ b/package.json
@@ -10,12 +10,16 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/react": "^11.10.8",
+    "@emotion/styled": "^11.10.8",
     "@fortawesome/fontawesome-svg-core": "^6.4.0",
     "@fortawesome/free-regular-svg-icons": "^6.4.0",
     "@fortawesome/free-solid-svg-icons": "^6.4.0",
     "@fortawesome/react-fontawesome": "^0.2.0",
+    "@mui/material": "^5.12.3",
     "daisyui": "^2.51.6",
     "firebase": "^9.21.0",
+    "flat-color-icons": "^1.1.0",
     "flowbite": "^1.6.5",
     "flowbite-react": "^0.4.4",
     "localforage": "^1.10.0",
